--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -6,31 +6,35 @@
   <div class="col-md-4 col-xs-4">
     <div class="row"  id="header_buttons">
       <div class="button_anchors float-left">
-        <div id="login_name_status">
-          <a href="{{ path('fos_user_security_login') }}" class="no_style_a">
-            <button id="button_login_a" class="btn btn-log
-            {% if (route == 'fos_user_security_login')
-                or (route == 'fos_user_resetting_reset')
-                or (route == 'fos_user_resetting_request')
-                or (route == 'fos_user_change_password')
-                or (route == 'fos_user_registration_register') %}
-            btn-log-active
-            {% endif %}
-            ">
-              {% if (route == 'fos_user_resetting_reset') %}
-                {{ 'header.titles.reset' | trans }}
-              {% elseif (route == 'fos_user_resetting_request') %}
-                {{ 'header.titles.request' | trans }}
-              {% elseif (route == 'fos_user_change_password') %}
-                {{ 'header.titles.changePassword' | trans }}
-              {% elseif (route == 'fos_user_registration_register') %}
-                {{ 'header.titles.register' | trans }}
-              {% else %}
-                {{ 'header.titles.login' | trans }}
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+          Connecté !!!
+        {% else %}
+          <div id="login_name_status">
+            <a href="{{ path('fos_user_security_login') }}" class="no_style_a">
+              <button id="button_login_a" class="btn btn-log
+              {% if (route == 'fos_user_security_login')
+                  or (route == 'fos_user_resetting_reset')
+                  or (route == 'fos_user_resetting_request')
+                  or (route == 'fos_user_change_password')
+                  or (route == 'fos_user_registration_register') %}
+              btn-log-active
               {% endif %}
-            </button>
-          </a>
-        </div>
+              ">
+                {% if (route == 'fos_user_resetting_reset') %}
+                  {{ 'header.titles.reset' | trans }}
+                {% elseif (route == 'fos_user_resetting_request') %}
+                  {{ 'header.titles.request' | trans }}
+                {% elseif (route == 'fos_user_change_password') %}
+                  {{ 'header.titles.changePassword' | trans }}
+                {% elseif (route == 'fos_user_registration_register') %}
+                  {{ 'header.titles.register' | trans }}
+                {% else %}
+                  {{ 'header.titles.login' | trans }}
+                {% endif %}
+              </button>
+            </a>
+          </div>
+        {% endif %}
       </div>
       
       <div class="button_anchors float-right" data-menuanchor="aboutUs">
