--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -51,7 +51,7 @@
 <!-- END HEAD -->
 
 <!-- BEGIN BODY -->
-  <body>
+  <body onLoad="onLoadData()">
         <!-- BEGIN header -->
           {% include 'includes/header.html.twig' %}
         <!-- END header -->
@@ -89,18 +89,7 @@
                   // sectionSelector: '.section',
                   // slideSelector: '.slide',
                   afterLoad: function(anchorLink, index){
-
-                    // Cookies
-                    $.cookie.json = true;
-                    var sessionCart = $.cookie("sessionCart");
-                    if (sessionCart) {}
-                    else {
-                      var sessionCart = [];
-                      $.cookie("sessionCart", sessionCart);
-                    }
-                    updateNotifNumber();
-
-                    // Active buttons
+                    // Top button
                     if (anchorLink == 'aboutUs' || anchorLink == 'ourProducts' || anchorLink == 'footerSection') {
                       document.getElementById("button_to_top").className = "opacity1";
                     }
@@ -108,6 +97,7 @@
                       document.getElementById("button_to_top").className = "opacity0";
                     }
 
+                    // Active buttons
                     if (anchorLink == 'aboutUs') {
                       document.getElementById("btn_section2").className = "btn btn-log";
                       document.getElementById("btn_section1").className += " btn-log-active";
@@ -132,6 +122,21 @@
                 // });
 
               });
+
+              function onLoadData() {
+                // Cookies
+                $.cookie.json = true;
+                var sessionCart = $.cookie("sessionCart");
+                if (sessionCart) {}
+                else {
+                  var sessionCart = [];
+                  $.cookie("sessionCart", sessionCart);
+                }
+                updateNotifNumber();
+
+                // Top button
+                document.getElementById("button_to_top").className = "opacity0";
+              }
             </script>
         </div>
         <!-- END CONTAINER -->
