--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -18,10 +18,10 @@
 			{{ 'footer.content.receiveOurNewsletter' | trans }}
 			<br/>
 			<br/>
-			<form method="post">
+			<form method="post" action="{{ path('lbf_main_newsletterEmail', {'path': app.request.attributes.get( '_route' )}) }}">
 				<div class="row">
 				    <div class="input-group">
-				      <input id="newsletter" name="newsletter_bas" type="text" class="form-control" placeholder="{{ 'footer.actions.enterEmail' | trans }}">
+				      <input id="newsletterEmail" name="newsletterEmail" type="text" class="form-control" placeholder="{{ 'footer.actions.enterEmail' | trans }}">
 				      <span class="input-group-btn">
 				        <button type="submit" class="btn btn-default" type="button">
 				        	{{ 'footer.actions.send' | trans }}
