--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -113,6 +113,8 @@
 										$('#info_panel_three').animate({'right' : '50%'}, {duration : 500});
 										panel_info_open = 'NO';
 									}
+
+									return false;
 								}
 							</script>
 
@@ -185,7 +187,7 @@
 						<div class="col-md-2 col-xs-2 white">
 							<button class="btn btn-log" onClick="addToSessionCart()">
 								<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
-								{{ 'ourProducts.actions.order' | trans }}
+								{{ 'header.titles.myCart' | trans }}
 							</button>
 						</div>
 					</div>
@@ -212,7 +214,7 @@
 						<!-- Varying numbers -->
 						<script type="text/javascript">
 							var div_types = [];
-							var div_maxs = [];
+							// var div_maxs = [];
 							var div_counter_values = [];
 							var div_weights_values = [];
 							var div_finalWeight = [];
@@ -222,7 +224,7 @@
 						{% for product in allProducts %}
 							<script type="text/javascript">
 								div_types[div_types.length] = "{{ product.type }}";
-								div_maxs[div_maxs.length] = eval('{{ product.quantity }}');
+								// div_maxs[div_maxs.length] = eval('{{ product.quantity }}');
 								div_counter_values[div_counter_values.length] = 0;
 								div_weights_values[div_weights_values.length] = eval('{{ product.weight }}');
 								div_finalWeight[div_finalWeight.length] = 0;
@@ -244,7 +246,7 @@
 								var weight_final_j = div_finalWeight[pos];
 								var price_j = div_prices_values[pos];
 								var cart_to_add_j = div_cart_values[pos];
-								if (counter_j < div_maxs[pos]) {
+								// if (counter_j < div_maxs[pos]) {
 									counter_j = counter_j + 1;
 									div_counter_values[pos] = counter_j ;
 									weight_final_j = counter_j * weight_j;
@@ -256,20 +258,20 @@
 									document.getElementById(div_weight).innerHTML = weight_final_j;
 									document.getElementById(div_price).innerHTML = cart_to_add_j;
 
-								}
-								else {
-									// Flash message
-									document.getElementById("sessionFlash").style.display = "block";
-									document.getElementById("sessionFlash").innerHTML = '\
-									<div class="alert alert-danger alert-dismissible fade in" role="alert">\
-								      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
-								      <strong>Careful!</strong> You\'ve reached the maximum availability.\
-								    </div>';
-								    setTimeout(function() {
-								    	$('.alert').fadeOut('fast');
-								    	document.getElementById("sessionFlash").style.display = "none";
-								    },4000);
-								}
+								// }
+								// else {
+								// 	// Flash message
+								// 	document.getElementById("sessionFlash").style.display = "block";
+								// 	document.getElementById("sessionFlash").innerHTML = '\
+								// 	<div class="alert alert-danger alert-dismissible fade in" role="alert">\
+								//       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
+								//       <strong>Careful!</strong> You\'ve reached the maximum availability.\
+								//     </div>';
+								//     setTimeout(function() {
+								//     	$('.alert').fadeOut('fast');
+								//     	document.getElementById("sessionFlash").style.display = "none";
+								//     },4000);
+								// }
 
 								return false;
 							}
@@ -320,7 +322,7 @@
 								if (div_counter_values[pos] > 0) {
 						            // To read the cart:
 						            var sessionCart = $.cookie("sessionCart");
-						            if (div_counter_values[pos] <= div_maxs[pos]) {
+						            // if (div_counter_values[pos] <= div_maxs[pos]) {
 						            	if (sessionCart.length > 0) {
 						            		var add_it = true;
 						            		for (var i = 0; i < sessionCart.length; i++) {
@@ -338,20 +340,20 @@
 						            		var sessionCart = [];
 						            		sessionCart[0] = {type: div_types[pos], qty: div_counter_values[pos]};
 						            	}
-						            }
-						            else {
-						            	// Flash message
-										document.getElementById("sessionFlash").style.display = "block";
-										document.getElementById("sessionFlash").innerHTML = '\
-										<div class="alert alert-danger alert-dismissible fade in" role="alert">\
-									      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
-									      <strong>Careful!</strong> There aren\'t as many objects of that type. Please select a smaller number. Thank you.\
-									    </div>';
-									    setTimeout(function() {
-									    	$('.alert').fadeOut('fast');
-									    	document.getElementById("sessionFlash").style.display = "none";
-									    },4000);
-									}
+									//   }
+									//   else {
+									//   // Flash message
+									// 	document.getElementById("sessionFlash").style.display = "block";
+									// 	document.getElementById("sessionFlash").innerHTML = '\
+									// 	<div class="alert alert-danger alert-dismissible fade in" role="alert">\
+									//       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
+									//       <strong>Careful!</strong> There aren\'t as many objects of that type. Please select a smaller number. Thank you.\
+									//     </div>';
+									//     setTimeout(function() {
+									//     	$('.alert').fadeOut('fast');
+									//     	document.getElementById("sessionFlash").style.display = "none";
+									//     },4000);
+									// }
 
 						            // To write the cart:
 						            $.cookie("sessionCart", sessionCart);
@@ -452,7 +454,7 @@
 																	</strong>
 																	{{ product.weight }} g
 																</div>
-																<div class="center">
+																<!-- <div class="center">
 																	<div class="inline_div">
 																		<strong>
 																			Available:
@@ -461,7 +463,7 @@
 																	<div class="inline_div">
 																		{{ product.quantity }}
 																	</div>
-																</div>
+																</div> -->
 																<div class="center">
 																	<strong>
 																		Price:
@@ -501,7 +503,7 @@
 																<input onClick="addOne('{{ product.type }}', 'counter_value_{{ product.type }}', 'weight_value_{{ product.type }}', 'price_value_{{ product.type }}')" class="add_buttons" type="button" value="+" title="Add one more"/>
 																<input onClick="deleteOne('{{ product.type }}', 'counter_value_{{ product.type }}', 'weight_value_{{ product.type }}', 'price_value_{{ product.type }}')" class="add_buttons" type="button" value="-" title="Delete one"/>
 															</div>
-															<div class="inline_div col-md-2 col-xs-2">
+															<div class="inline_div col-md-3 col-xs-3">
 																<div class="inline_div counter_info_divs">
 																	<div id="counter_value_{{ product.type }}">
 																		0
