--- a/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
+++ b/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section" id="section0">
+			<div class="section" id="section8">
 				<br/><br/>
 				
 				<div class="row">
@@ -70,8 +70,16 @@
 						    </li>
 						    <br/>
 						    <li role="user_tabs" class="">
+						    	<a href="#onHold" aria-controls="onHold" role="tab" data-toggle="tab" class="btn btn-choice">
+						    		Orders on hold ({{ onHoldOrders|length }})
+						    		<div class="float-right inner_arrow">
+										<img src="{{ asset('img/system/defaults/onHoldOrders.png') }}" alt="" class="btn_right_arrow"/>
+									</div>
+						    	</a>
+						    </li>
+						    <li role="user_tabs" class="">
 						    	<a href="#current" aria-controls="current" role="tab" data-toggle="tab" class="btn btn-choice">
-						    		Current orders
+						    		Current orders ({{ currentOrders|length }})
 						    		<div class="float-right inner_arrow">
 										<img src="{{ asset('img/system/defaults/currentOrders.png') }}" alt="" class="btn_right_arrow"/>
 									</div>
@@ -79,7 +87,7 @@
 						    </li>
 						    <li role="user_tabs" class="">
 						    	<a href="#past" aria-controls="past" role="tab" data-toggle="tab" class="btn btn-choice">
-						    		Past orders
+						    		Past orders ({{ pastOrders|length }})
 						    		<div class="float-right inner_arrow">
 										<img src="{{ asset('img/system/defaults/pastOrders.png') }}" alt="" class="btn_right_arrow"/>
 									</div>
@@ -235,8 +243,8 @@
 								<div class="edit_profile">
 									<div class="form-group row">
 										{% set name_title = 'user.details.changeAvatar' | trans %}
-										{{ form_label(formEditAvatar.file, name_title, 
-											{'label_attr': {'class': 'control-label'}}) }}
+										{# form_label(formEditAvatar.file, name_title, 
+											{'label_attr': {'class': 'control-label'}}) #}
 										{{ form_errors(formEditAvatar) }}
 										<div class="input-icon">
 								        	{{ form_widget(formEditAvatar.file) }}
@@ -271,8 +279,8 @@
 							</form>
 				    	</div>
 				    	<div role="tabpanel" class="tab-pane" id="edit">
-				    		To edit your information, fill-in the missing fields : 
-							<form method="post" action="{{ path('lbf_user_edit') }}" {{ form_enctype(formEditUser) }}>
+				    		To edit your information, fill-in the missing fields : <br/><br/>
+							<form method="post" {{ form_enctype(formEditUser) }}>
 				        		{% if form_errors(formEditUser) %}
 				                    <div class="error_message">
 				                      <span class="warning_word">
@@ -284,11 +292,11 @@
 				                    </div>
 				                    <br/>
 				                  {% endif %}
-								<div class="edit_profile">
-									<div class="form-group row">
+								<div class="row80">
+									<div class="form-group">
 										{% set firstName_title = 'user.details.firstName' | trans %}
-								        {{ form_label(formEditUser.firstName, firstName_title, 
-								        	{'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.firstName, firstName_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.firstName) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -308,10 +316,10 @@
 								        	{{ form_widget(formEditUser.firstName, opt_firstname) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set lastName_title = 'user.details.lastName' | trans %}
-								        {{ form_label(formEditUser.lastName, lastName_title, 
-								        	{'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.lastName, lastName_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.lastName) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -331,9 +339,10 @@
 								        	{{ form_widget(formEditUser.lastName, opt_lastname) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set email_title = 'user.details.email' | trans %}
-								        {{ form_label(formEditUser.email, email_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.email, email_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.email) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -353,9 +362,10 @@
 								        	{{ form_widget(formEditUser.email, opt_email) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set gender_title = 'user.details.gender' | trans %}
-								        {{ form_label(formEditUser.gender, gender_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.gender, gender_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.gender) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -373,10 +383,10 @@
 								        	{{ form_widget(formEditUser.gender, opt_gender) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 							        	{% set age_title = 'user.details.age' | trans %}
-										{{ form_label(formEditUser.age, age_title, 
-											{'label_attr': {'class': 'control-label'}}) }}
+										{# form_label(formEditUser.age, age_title, 
+											{'label_attr': {'class': 'control-label'}}) #}
 										{% if form_errors(formEditUser.age) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -394,9 +404,10 @@
 								        	{{ form_widget(formEditUser.age, opt_age) }}
 										</div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set tel_title = 'user.details.tel' | trans %}
-								        {{ form_label(formEditUser.tel, tel_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.tel, tel_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.tel) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -416,9 +427,10 @@
 								        	{{ form_widget(formEditUser.tel, opt_tel) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set addressNumber_title = 'user.details.address' | trans %}
-								        {{ form_label(formEditUser.addressNumber, addressNumber_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.addressNumber, addressNumber_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.addressNumber) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -438,9 +450,10 @@
 								        	{{ form_widget(formEditUser.addressNumber, opt_addressNumber) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set addressStreet_title = 'user.details.address' | trans %}
-								        {{ form_label(formEditUser.addressStreet, addressStreet_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.addressStreet, addressStreet_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.addressStreet) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -460,9 +473,9 @@
 								        	{{ form_widget(formEditUser.addressStreet, opt_addressStreet) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set addressPostCode_title = 'user.details.address' | trans %}
-								        {{ form_label(formEditUser.addressPostCode, addressPostCode_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.addressPostCode, addressPostCode_title, {'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.addressPostCode) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -482,9 +495,10 @@
 								        	{{ form_widget(formEditUser.addressPostCode, opt_addressPostCode) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 										{% set addressCity_title = 'user.details.address' | trans %}
-								        {{ form_label(formEditUser.addressCity, addressCity_title, {'label_attr': {'class': 'control-label'}}) }}
+								        {# form_label(formEditUser.addressCity, addressCity_title, 
+								        	{'label_attr': {'class': 'control-label'}}) #}
 								        {% if form_errors(formEditUser.addressCity) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -504,10 +518,10 @@
 								        	{{ form_widget(formEditUser.addressCity, opt_addressCity) }}
 								        </div>
 									</div>
-									<div class="form-group row">
+									<div class="form-group">
 							        	{% set country_title = 'user.details.country' | trans %}
-										{{ form_label(formEditUser.addressCountry, country_title, 
-											{'label_attr': {'class': 'control-label'}}) }}
+										{# form_label(formEditUser.addressCountry, country_title, 
+											{'label_attr': {'class': 'control-label'}}) #}
 										{% if form_errors(formEditUser.addressCountry) %}
 						                    <div class="error_message">
 						                      	<span class="warning_word">
@@ -532,14 +546,88 @@
 
 									<!-- Et pour le reste du formulaire ... ;) -->
 									{{ form_widget(formEditUser) }}
-									<input type="submit" class="btn btn-perso  float-right validate_button"  
+									<input type="submit" class="btn btn-log  float-right"
 										value="{{'user.actions.save' | trans }}"/>
 								</div>
 							</form>
 				    	</div>
+				    	<div role="tabpanel" class="tab-pane" id="onHold">
+							{% if onHoldOrders|length > 0 %}
+								<div class="table-responsive">
+			                      <table class="table">
+			                        <thead>
+			                          <tr>
+			                            <th class="center">
+			                              Order n°
+			                            </th>
+			                            <th class="left">
+			                              Elements
+			                            </th>
+			                            <th class="center">
+			                              Created
+			                            </th>
+			                            <th class="center">
+			                              Delivery asked for
+			                            </th>
+			                            <th class="center">
+			                              Status
+			                            </th>
+			                          </tr>
+			                        </thead>
+			                        <tbody>
+			                          {% for single_order in onHoldOrders %}
+			                            <tr>
+			                              <th class="center">
+			                                {{ single_order.id }}
+			                              </th>
+			                              <td class="left">
+			                              	{% if single_order.elements|length > 0 %}
+			                              		<ul class="list_no_style_li">
+			                              			{% for single_element in single_order.elements %}
+			                              				{% set item = single_element['item'] %}
+		                            					{% set qty = single_element['qty'] %}
+			                              				<li>
+			                              					{{ item.name }} (x{{ qty }})
+			                              				</li>
+			                              			{% endfor %}
+			                              		</ul>
+			                              	{% else %}
+			                              	{% endif %}
+			                              </td>
+			                              <td class="center">
+			                              	{{ single_order.createdAt }}
+			                              </td>
+			                              <td class="center">
+			                              	{{ single_order.deliveryAt|date("H:i d/M/Y") }}
+			                              </td>
+			                              <td class="center">
+			                              	{% if single_order.status == 'onHold' %}
+			                              		On hold
+			                              	{% elseif single_order.status == 'confirm' %}
+			                              		Confirmed
+			                              	{% elseif single_order.status == 'confirm' %}
+			                              		Completed
+			                              	{% endif %}
+			                              </td>
+			                            </tr>
+			                          {% endfor %}
+			                        </tbody>
+			                      </table>
+			                    </div>
+							{% else %}
+								<div class="center col-md-9">
+									Sorry, no orders to be confirmed. Please make sure you validated your order.
+									<br/><br/><br/>
+									<a href="{{ path('lbf_main_homepage') }}#ourProducts" type="button" class="no_style_a btn btn-modal" data-dismiss="modal">
+							            Go shopping 
+							        </a>
+								</div>
+								<div class="col-md-3"></div>
+							{% endif %}
+				    	</div>
 				    	<div role="tabpanel" class="tab-pane" id="current">
-							{% if app.user.currentOrders|length > 0 %}
-								{{ app.user.currentOrders }}
+							{% if currentOrders|length > 0 %}
+								{{ currentOrders }}
 							{% else %}
 								<div class="center col-md-9">
 									Sorry, no current orders in progress.
@@ -552,8 +640,8 @@
 							{% endif %}
 				    	</div>
 				    	<div role="tabpanel" class="tab-pane" id="past">
-				    		{% if app.user.pastOrders|length > 0 %}
-								{{ app.user.pastOrders }}
+				    		{% if pastOrders|length > 0 %}
+								{{ pastOrders }}
 							{% else %}
 								<div class="center col-md-9">
 									Sorry, no past orders in progress.
