--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -73,17 +73,17 @@
                 $('#fullpage').fullpage({
                   anchors: ['mainSection', 'ourProducts', 'aboutUs', 'footerSection'],
                   menu: '#menu',
-                  // autoScrolling: false,   // Undo one for the other
                   scrollingSpeed: 1000,  // Other
                   scrollOverflow: true,
                   allowScrolling: true,
+                  // autoScrolling: false,
                   css3: true,
                   // slidesNavigation: false,
-                  // controlArrows: false,
+                  controlArrows: false,
                   // loopHorizontal: false,
                   navigation: true,
                   navigationPosition: 'right',
-                  responsive: 1200,
+                  // responsive: 1200,
                   verticalCentered: false,
                   paddingTop: '50px',
                   // sectionSelector: '.section',
