--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -18,6 +18,7 @@ body
 	font-family: 'existencelight';  /*sakkal_majallaregular*/
 	font-weight: 100;
 	color: white !important;
+
 }
 
 /* ------------------------------------------------------ General ------------------------------------------------------ */
@@ -54,14 +55,19 @@ h1
 	font-family: 'espacio';
 	font-weight: 500;
 }
-@media (min-width: 1001px) {
+@media (min-width: 1201px) {
 	h1 {
 		font-size: 3em;
 	}
 }
-@media (max-width: 1000px) {
+@media (min-width: 901px) and (max-width: 1200px){
 	h1 {
 		font-size: 2em;
+	}
+}
+@media (max-width: 900px) {
+	h1 {
+		font-size: 1.5em;
 	}
 }
 
@@ -76,7 +82,7 @@ h2 span {
 	position: relative;
 	left: 50px;
 }
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 	h2 {
 		font-size: 2em;
 	}
@@ -84,7 +90,7 @@ h2 span {
 		font-size: 0.7em;
 	}
 }
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 	h2 {
 		font-size: 1.2em;
 	}
@@ -97,12 +103,12 @@ h3
 {	
 	color: white;
 }
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 	h3 {
 		font-size: 1.5em;
 	}
 }
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 	h3 {
 		font-size: 1em;
 	}
@@ -112,12 +118,12 @@ h4
 {	
 	text-align: left;
 }
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 	h4 {
 		font-size: 1.3em;
 	}
 }
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 	h4 {
 		font-size: 0.85em;
 	}
@@ -127,12 +133,12 @@ h5 {
 	color: #922e2e;
 	font-weight: 800;
 }
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 	h5 {
 		font-size: 1em;
 	}
 }
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 	h5 {
 		font-size: 0.7em;
 	}
@@ -239,12 +245,12 @@ p {
 	text-align: left;
 	color: white;
 }
-@media (min-width: 1001px) {
+@media (min-width: 901px) {
 	p {
 		font-size: 1em;
 	}
 }
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
 	p {
 		font-size: 0.7em;
 	}
@@ -314,17 +320,33 @@ strong {
 }
 
 .user_img_header {
-	border-radius: 20px;
 	border: 1px solid white;
-	width: 40px !important;
 	margin: 0;
 }
 .user_info_header {
-	font-size: 0.8em;
 	overflow: hidden;
 	border-bottom: 1px solid transparent;
 	position: relative;
-	top: -14px;
+}
+@media (min-width: 901px) {
+	.user_img_header {
+		border-radius: 20px;
+		width: 40px !important;
+	}
+	.user_info_header {
+		font-size: 0.8em;
+		top: -14px;
+	}
+}
+@media (max-width: 900px) {
+	.user_img_header {
+		border-radius: 10px;
+		width: 20px !important;
+	}
+	.user_info_header {
+		font-size: 0.6em;
+		top: -10px;
+	}
 }
 .user_access_button:hover .user_info_header {
 	border-bottom: 1px solid white;
@@ -335,22 +357,27 @@ strong {
 }
 
 .btn-log, .btn-log:focus {
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
 	border-bottom: 1.5px solid transparent;
 	border-top: 1.5px solid transparent;
 }
-@media (min-width: 1001px) {
+@media (min-width: 1201px) {
 	.btn-log {
-		font-size: 1.2em;
+		font-size: 1.1em;
 	}
 }
-@media (max-width: 1000px) {
+@media (min-width: 901px) and (max-width: 1200px){
 	.btn-log {
-		font-size: 0.7em;
+		font-size: 0.85em;
+	}
+}
+@media (max-width: 900px) {
+	.btn-log {
+		font-size: 0.65em;
 	}
 }
 .btn-log:hover, .btn-log-active {
@@ -366,10 +393,22 @@ strong {
 .language_box {
 	float: left;
 	margin-top: 4px;
-	margin-right: 5px;
 }
-.language_flag {
-  width: 24px;
+@media (min-width: 901px) {
+	.language_flag {
+	  width: 24px;
+	}
+	.language_box {
+		margin-right: 5px;
+	}
+}
+@media (max-width: 900px) {
+	.language_flag {
+	  width: 12px;
+	}
+	.language_box {
+		margin-right: 1px;
+	}
 }
 
 .language_selection {
