--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -23,7 +23,7 @@
 					<div class="col-md-4 col-xs-4">
 						<div class="welcome_page">
 					      <div class="logo_welcome">
-					        <img src="{{ asset('img/logo/LeBuffetFrances_Final_Small.png') }}" alt="Logo" class="logo_welcome_img"/>
+					        <img src="{{ asset('img/system/logo/LeBuffetFrances_Final_Small.png') }}" alt="Logo" class="logo_welcome_img"/>
 					      </div>
 					    </div>
 					</div>
@@ -127,7 +127,7 @@
 									<br/>
 									<button class="no_style_button" onClick="revealPanelOne()">
 										<a href="javascript:void(0)" class="read-more">
-											{{ 'main.actions.learnMore' | trans }}
+											{{ 'main.actions.learnMore' | trans }} &nbsp;
 										</a>
 									</button>
 								</p>
@@ -143,7 +143,7 @@
 									<br/>
 									<br/>
 									<a class="read-more" href="#">
-										{{ 'main.actions.learnMore' | trans }}
+										{{ 'main.actions.learnMore' | trans }} &nbsp;
 									</a> >
 								</p>
 							</div>
@@ -158,7 +158,7 @@
 									<br/>
 									<br/>
 									<a class="read-more" href="#">
-										{{ 'main.actions.learnMore' | trans }}
+										{{ 'main.actions.learnMore' | trans }} &nbsp;
 									</a> >
 								</p>
 							</div>
